# generates

./: .gitignore  README.rst  setup.cfg
generates/: __init__.py
