[metadata]
name = generates
version = attr: generates.__version__
description = Micro library providing generates decorator
long_description = file: README.rst
keywords = generates, context manager, generator
author = Tuomas Suutari
author_email = tuomas.suutari@anders.fi
license = MIT
license_file = LICENSE
# List of classifiers available at:
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages = find:
#install_requires =
#    nothing

#[options.entry_points]
#console_scripts =
#    script-name = python.module:main_function

[bdist_wheel]
universal = 1
